--- a/roogallifrey.html
+++ b/roogallifrey.html
@@ -756,17 +756,15 @@ complex celluar structure that allows them to be programmed <span class="A-fanon
 				<h2>FAUNA OF GALLIFREY</h2>
 				<div class="section">
 					<span class="A-audiobook">
-						<span class="A-notbbc"><span class="A-licensed">Though they claim that the planet's ecosystems haven't been damaged by the Gallifreyan people, infact</span> millions of years after the installation of the Eye of Harmony, very little of Gallifrey’s original biosphere
-							survives and some species,
-							<span class="A-audiobook">like the the fledershrews, are in danger of dying out.</span>
-						</span>
-					</span>
-					<span class="A-audiobook"> But</span>
-					<span class="A-audiobook"> Time Lords have used the Time Scoop to collect all the extinct species from its past. For this reason, no animal ever
-						became completely extinct.
-						<span class="A-fanon">They are probably preserved in zoos </span>
-					</span>
-					<span class="A-audiobook">and some of the more fearsome ones were placed in the Death Zone. </span>
+						<span class="A-notbbc"><span class="A-licensed">Though they claim that the planet's ecosystems haven't been damaged by the Gallifreyan people, </span></span></span><span class="A-audiobook"><span class="A-notbbc">over the millions of years since the installation of the Eye of Harmony, </span></span><span class="A-audiobook"><span class="A-notbbc">very little of Gallifrey’s original biosphere
+							survives</span></span><span class="A-audiobook"><span class="A-notbbc"> </span></span><span class="A-audiobook"><span class="A-notbbc">and&nbsp;<span class="A-audiobook">some
+of the surviving species, like the fledershrews, are in danger of dying
+out. While the outer ecology has been devastated,&nbsp;</span></span></span><span class="A-audiobook"></span><span class="A-audiobook">the
+Time Lords have used the Time Scoop to collect all the extinct species
+from its past and place them in zoos. For this reason, no animal ever
+became completely extinct. <span class="A-fanon"></span></span><span class="A-audiobook">Some
+of the more fearsome ones were placed in the Death Zone. There are also
+Xeno-Zoos that hold alien creatures from other worlds. </span>
 				</div>
 				<div class="section">
 					<span class="A-audiobook"><b>* Invertebrates:</b> Beatitude Flies (with golden wings),
