Sherman Gallifreyan added

--- a/roobiology.html
+++ b/roobiology.html
@@ -662,15 +662,19 @@ caused by sudden changes in position. <span class="A-tv">They also appear to hav
 					of 300. A double pulse of 170
 					<span class="A-fanon">(85 per heart?)</span> is considered more or less normal.
 					<span class="A-fanon">
-						<span class="A-licensed">The electrical activity of the hearts is much greater then a humans </span>and the beats are quite powerful</span>
+						<span class="A-licensed"></span></span></span><span class="A-tv"><span class="A-fanon">The beats are quite powerful</span>
 					<span class="A-licensed"> making it difficult for the hearts to be exactly located with a </span>
 				</span>
-				<span class="A-licensed">stethoscope </span>
+				<span class="A-licensed">stethoscope.</span><span class="A-tv"><span class="A-fanon"><span class="A-licensed"> The electrical activity of the hearts is much greater then a humans </span>and</span></span><span class="A-licensed"> </span>
 				<span class="A-tv">Gallifreyan have been know to survive lightning strikes
 					<span class="A-audiobook">and</span>
 				</span>
 				<span class="A-audiobook"> shrug off a shock of </span>
-				<span class="A-audiobook">430 Volts.</span>
+				<span class="A-audiobook">430
+Volts. However human physicians have theorized that the monotony of the
+occurance of inter-caval conduction block during atrial flutter would
+mean that the anatomy or electrophysiology of Gallifreyan hearts give
+them a predisposition for conduction abnormalities.</span>
 			</div>
 			<div class="section">
 				<span class="A-licensed">Both
@@ -693,8 +697,7 @@ caused by sudden changes in position. <span class="A-tv">They also appear to hav
 a Gallifreyan stops spending his life functions and returns to full
 life they can not re-enter this state of suspended animation for some
 time. They can voluntarily dilate and contract their control blood
-vessels. &nbsp;Their biogenic molecules clean out their arteries from
-becoming clogged. <br></span>
+vessels. <br></span>
 				<span class="A-tv">They can survive with only 1 heart beating,
 					<span class="A-audiobook"> and can often restart the other by pounding on their own chest. </span>
 				</span>
@@ -715,7 +718,9 @@ becoming clogged. <br></span>
 				<span class="A-licensed">
 					<span class="A-tv">It doesn't conform with any form of human blood</span> because it has a different pathological state </span>
 				<span class="A-licensed">
-					<span class="A-audiobook">and lots of unusual acids.</span> The respiratory pigment </span>
+					<span class="A-audiobook">and lots of acids, not found in humans.&nbsp;These acids perform various functions including the </span></span><span class="A-tv"></span>
+				<span class="A-audiobook">self-regenerating genetic imprimature of the biogenic molecules</span><span class="A-licensed"><span class="A-audiobook">.</span> </span><span class="A-audiobook">These molecules clean out their arteries to prevent them from
+becoming clogged. </span><span class="A-licensed">The respiratory pigment </span>
 				<span class="A-audiobook">doesn't use hemoglobin
 					<span class="A-licensed">but does share some of structural characteristics of human hemoglobin. </span>
 				</span>
@@ -1060,7 +1065,7 @@ historians&nbsp;speculate that that Rassilon wanted this limit because
 he didn't want any Time Lord to become immortal and possibly become
 greater than him. </span><span class="A-tv">At first only Time Lords were given the gift of regeneration, <span class="A-audiobook">but later it would be shared with all Gallifreyans.</span> Virtually all
 records in the Matrix concerning the Timeless Child were later redacted
-from the Matrix leaving a ficticious history&nbsp;</span><span class="A-audiobook"><span class="A-tv"><span class="A-licensed">about the Immortality Virus being created </span><span class="A-licensed">by the Biosynthesist Thremix.</span></span></span><br><span class="A-audiobook"><br>Modern Gallifreyan bodies are filled with self-replicating biogenic molecules
+from the Matrix leaving a ficticious history&nbsp;</span><span class="A-audiobook"><span class="A-tv"><span class="A-licensed">about the Immortality Virus being created </span><span class="A-licensed">by the Biosynthesist Thremix.</span></span></span><br><span class="A-audiobook"><br>Modern Gallifreyan bodies are filled with an imprimature of self-replicating/regenerating&nbsp;bio-genetic molecules
 					<span class="A-licensed">(sometimes known as the Immortality Virus,
 						<span class="A-audiobook">the Legacy of Rassilon). These permanently carried nanites </span>
 					</span>work ceaselessly to repair and prune damaged and malformed cells. They also clean out arteries if too much fried food
