--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -1644,8 +1644,8 @@ system preventing any non-Gallifreyan from opening it.</span>
 						<span class="A-tv">Because of the risk of psychosomatic feedback living brains are never hooked directly into the Matrix. The Lord President
 							is an exception to this but he spends years training for such contact. </span>
 						<span class="A-audiobook">Gallifreyans can also use 'Soul Catching' to take the 'mind' of someone who is dying. </span>
-						<span class="A-tv">Once in the APC they live on forever.<br><span class="A-audiobook"></span>
-						</span>
+						<span class="A-tv">Once in the APC they live on forever. </span>
+						<br>
 					</div>
 					<div class="section">
 						<span class="A-audiobook">The deceased Gallifreyan's body is entombed in the vaults beneath their Houses </span>
@@ -1660,7 +1660,7 @@ keep his body from being discovered. Under these circumstances </span><span clas
 internment in the Matrix the confession dial will open for the friend
 and they can enter the dimensionally transcendental interior. There
 they can view the confessions and last will and testament of the
-deceased.</span><span style=""><span class="A-tv"></span></span><span class="A-audiobook"> The Gallifreyan Roll of Honor is a list of Gallifreyans who have died with valor.</span>
+deceased. </span><span class="A-audiobook">The Gallifreyan Roll of Honor is a list of Gallifreyans who have died with valor.</span>
 						<br>
 					</div>
 				</div>
@@ -2058,40 +2058,52 @@ how to speak or read it.&nbsp;</span></span><span class="A-audiobook"><span clas
 					<div class="box">
 						<h2>Modern High Gallifreyan </h2>
 						<figure>
-							<img style="" src="images/gallifrey_2_imagestamps_by_purplerhino.jpg" alt="Modern High Gallifreyan">
+							<img src="images/gallifrey_2_imagestamps_by_purplerhino.jpg" alt="Modern High Gallifreyan">
 							<figcaption>
 								<span class="A-fanon">Modern High </span>
 								<span class="A-tv">Gallifreyan Text from </span>
 								<span class="A-fanon">21stcenturydoctorwho.com </span>
 							</figcaption>
 						</figure>
-						<p>
+						<p class="A-licensed">
 							<span class="A-tv">Modern
 								<span class="A-fanon">High</span> Gallifreyan </span>
 							<span class="A-fanon">(sometimes known as Circular Gallifreyan) </span>
 							<span class="A-tv">is a form of writing that even TARDIS telepathic circuits can't translate for lesser species.
 								<span class="A-fanon">As such,</span> it was often used for sensitive technical or scientific notation, as it couldn't be easily decoded
 								by other species. In the Time War era everything the Time Lords wrote was in this
-								<span class="A-fanon">more secure </span>Gallifreyan. </span>
-							<span class="A-audiobook">The Patrexian Numbers serve as a numerical base to everything that Patrexian's create. </span>
-							<span class="A-audiobook">Messages are written in equations that must be solved to be deciphered. This half writing, half math language is very
-								precise, but not very practical. </span>
+								<span class="A-fanon">more secure </span>Gallifreyan. </span> 
 						</p>
-						<figure>
-							<img style="" src="images/phoneticgallifreyan.jpg" alt="Phonetic Gallifreyan">
-							<img style="" src="images/numbers4.jpg" alt="Gallifreyan Numbers">
-							<figcaption>
-								<span class="A-game">Phonetic Gallifreyan symbols with English equivalents </span>
-								<span class="A-fanon">and Modern High </span>
-								<span class="A-audiobook">Gallifreyan Numbers </span>
-								<span class="A-fanon">(a base 7 counting system)</span>
-							</figcaption>
-						</figure>
+							<figure>
+								<img src="images/phoneticgallifreyan.jpg" alt="Phonetic Gallifreyan">
+								<figcaption>
+									<span class="A-game">Phonetic Gallifreyan symbols with English equivalents </span>
+								</figcaption>
+							</figure>
+						<p>
+								<span class="A-game"> The fan-made Circular Gallifreyan writing style created by Loren Sherman has been used on multiple liscensed Dr Who products. Lots more information about it can be found </span><a href="https://shermansplanet.com/gallifreyan/">here</a> 
+						</p>
+							<figure>
+								<img src="images/roo-circular.jpg" alt="Sherman Gallifreyan">
+								<figcaption>
+									<span class="A-game">The words 'Rassilon Omega and that Other Guy' written in Sherman's Circular Gallifreyan </span>
+								</figcaption>
+							</figure>
+						<p>
+							<span class="A-audiobook">The Patrexian Numbers serve as a numerical base to everything that Patrexian's create. Messages are written in equations that must be solved to be deciphered. This half writing, half math language is very precise, but not very practical. </span><span class="A-fanon">It is a base 7 counting system</span>
+						</p>
+							<figure>
+								<img src="images/numbers4.jpg" alt="Gallifreyan Numbers">
+								<figcaption>
+									<span class="A-fanon">Modern High </span>
+									<span class="A-audiobook">Gallifreyan Numbers (the symbol at the bottom of each large hexagon is the actual number)</span>
+								</figcaption>
+							</figure>
 					</div>
 					<div class="box">
 						<h2>Modern Low Gallifreyan </h2>
 						<figure>
-							<img style="" src="images/letter.jpg" alt="The Doctor's Letter">
+							<img src="images/letter.jpg" alt="The Doctor's Letter">
 							<figcaption>
 								<span class="A-tv">"To the Castellan of the Chancery Guard. I've good reason to think the life of His Supremacy the President is in
 									grave danger. Do not ignore this warning. The Doctor." (The name is signed over the Prydonian Seal)</span>
@@ -2109,18 +2121,18 @@ how to speak or read it.&nbsp;</span></span><span class="A-audiobook"><span clas
 							<span class="A-audiobook">This half writing, half math language is very precise, but not very practical. </span>
 						</p>
 						<figure>
-							<img style="" src="images/you.jpg" alt="You">
-							<img style="" src="images/love.jpg" alt="Love">
-							<img style="" src="images/haha.jpg" alt="Ha Ha">
+							<img src="images/you.jpg" alt="You">
+							<img src="images/love.jpg" alt="Love">
+							<img src="images/haha.jpg" alt="Ha Ha">
 							<figcaption>
 								<span class="A-audiobook">The words "You, "Love" and "Ha Ha"(as in the reader), written in Gallifreyan</span>
 							</figcaption>
 						</figure>
 						<figure>
-							<img style="" src="images/salyavinx.jpg" alt="Salyavin">
-							<img style="" src="images/prosecutor.jpg" alt="Deliavatsud">
-							<img style="" src="images/reporter.jpg" alt="Reporter's Name">
-							<img style="" src="images/archivist.jpg" alt="Archivist's Name"><big><big><big><big><big><big><big><big><span class="A-notbbc" style="font-weight: bold;">∞×∑û≠∆</span></big></big></big></big></big></big></big></big></figure><span style="font-weight: bold;" class="A-licensed A-notbbc"></span><figure>
+							<img src="images/salyavinx.jpg" alt="Salyavin">
+							<img src="images/prosecutor.jpg" alt="Deliavatsud">
+							<img src="images/reporter.jpg" alt="Reporter's Name">
+							<img src="images/archivist.jpg" alt="Archivist's Name"><big><big><big><big><big><big><big><big><span class="A-notbbc" style="font-weight: bold;">∞×∑û≠∆</span></big></big></big></big></big></big></big></big></figure><span style="font-weight: bold;" class="A-licensed A-notbbc"></span><figure>
 							<figcaption>
 								<span class="A-audiobook">The names Salyavin X, </span>
 								<span class="A-game">Deliavatsud, </span>
@@ -2129,7 +2141,7 @@ how to speak or read it.&nbsp;</span></span><span class="A-audiobook"><span clas
 							</figcaption>
 						</figure>
 						<figure>
-							<img style="" src="images/gallifreynumbers.jpg" alt="Gallifreyan Numerical Keypad">
+							<img src="images/gallifreynumbers.jpg" alt="Gallifreyan Numerical Keypad">
 							<figcaption>
 								<span class="A-tv">Gallifreyan numerical keypad. Translation:
 									<br>[1][2][3][4][5][6]
@@ -2141,7 +2153,7 @@ how to speak or read it.&nbsp;</span></span><span class="A-audiobook"><span clas
 					<div class="box">
 						<h2>Known Gallifreyan Words </h2>
 						<figure>
-							<img style="" src="images/censored.jpg" alt="CENSORED">
+							<img src="images/censored.jpg" alt="CENSORED">
 							<figcaption>
 								<span class="A-audiobook">This Gallifreyan curse has no English translation, and is so rude that it has been deleted from the Matrix. </span>
 							</figcaption>
