--- a/rootimelord.html
+++ b/rootimelord.html
@@ -275,9 +275,7 @@
 				<span class="A-tv">Without this system a Capsule would be destroyed by the Vortex </span>
 				<span class="A-audiobook">after several hundred years. They are connected to their TARDIS through transcendent biomechanics based on irrational
 					and imaginary equations. </span>
-				<span class="A-tv">This </span>
-				<span class="A-audiobook">self-regenerating genetic </span>
-				<span class="A-notbbc">neural-</span>
+				<span class="A-tv">This&nbsp;</span><span class="A-audiobook"></span><span class="A-notbbc">neural-</span>
 				<span class="A-audiobook">
 					<span class="A-tv">link is known as the Rassilon Imprimatur. </span>The
 Chronon Nuclei serve a similar function with Time Rings and other
