Done with Loom/Tomb

--- a/index.html
+++ b/index.html
@@ -309,9 +309,6 @@ menu will show you the source of each color. Alternately click on the <a href="#
 				<img src="images/crib.jpg" title="Gallifreyan Crib" alt="Gallifreyan Crib">
 				<ul>
 					<li>
-						<a href="roolifedeath.html#houses">The Great Houses</a>
-					</li>
-					<li>
 						<a href="roolifedeath.html#buffing">Brainbuffing</a>
 					</li>
 					<li>
@@ -332,14 +329,14 @@ menu will show you the source of each color. Alternately click on the <a href="#
 					<li>
 						<a href="roolifedeath.html#city">City-Complexes</a>
 					</li>
+					<li>
+						<a href="roolifedeath.html#life">Life on Gallifrey</a>
+					</li>
 				</ul>
 			</div>
 			<div class="table" id="culture">
 				<img src="images/urn.jpg" title="Gallifreyan Urn" alt="Gallifreyan Urn">
 				<ul>
-					<li>
-						<a href="roolifedeath.html#life">Life on Gallifrey</a>
-					</li>
 					<li>
 						<a href="roolifedeath.html#games">Recreation</a>
 					</li>
@@ -395,6 +392,9 @@ menu will show you the source of each color. Alternately click on the <a href="#
 					</li>
 					<li>
 						<a href="roogovernment.html#chapter">The Chapters</a>
+					</li>
+					<li>
+						<a href="roogovernment.html#houses">The Great Houses</a>
 					</li>
 					<li>
 						<a href="roogovernment.html#cia">The Celestial Intervention Agency</a>
