--- a/roogallifrey.html
+++ b/roogallifrey.html
@@ -565,7 +565,7 @@ Depending on conditions </span><span class="A-tv">the moon appears to be copper 
 						<span class="A-infinity"> </span>
 						<span class="A-tv">
 							<span class="A-infinity">of</span> the</span><span class="A-tv"> of Wild Endeavor</span><span class="A-tv">.&nbsp;<span class="A-audiobook"><span class="A-infinity"></span></span>Its located between the mountains of Solace and Solitude. The valley between
-those mountains is known as the Drylands. &nbsp;Despite the facth that the Untempered Schism is
+those mountains is known as the Drylands. &nbsp;Despite the fact that the Untempered Schism is
 found here, outlanders are the only inhabitants. <span class="A-licensed">Another schism, the Crevasse of Memories That Will Be, is located outside the Capitol. </span></span><span class="A-audiobook">During the Dark Times the Capitol often suffers from a bitter wind from the Northern Lakes. </span><span class="A-tv"><span class="A-licensed"><br><br>The Capitol isn't too far from</span> the red grass covered hillsides of Mount Perdition.
 							<span class="A-licensed">The areas around Mount Perdition were once filled with fruit and wild game.</span>
 							<span class="A-alternate">
@@ -813,8 +813,11 @@ Xeno-Zoos that hold alien creatures from other worlds. </span>
 						sized furry creatures, live in mountains, attach en masse to warm objects), </span>
 					<span class="A-audiobook">Taffelshrews, </span>
 					<span class="A-audiobook">Fledershrews (bat-like, mushroom eaters, that are nearly extinct),</span>
-					<span class="A-audiobook"> Cobblemice (which sprout wings), Rovie Mice (live in fields, long lived if they are not killed, sometimes kept as pets),
-						Vex (burrowing animal), Gallifreyan Womprats (1 meter long rats with fifteen legs), Pig-Rats, Rabbits, </span><span class="A-audiobook"><span class="A-licensed"></span>Flubbles (small six-legged koalas), an animal similar to a rabbit, but rounder, </span>
+					<span class="A-audiobook">
+Cobblemice (which sprout wings), Rovie Mice (live in fields, long lived
+if they are not killed, sometimes kept as pets), Vex (burrowing
+animal), Gallifreyan Womprats (1 meter long rats with fifteen legs),
+Pig-Rats (which live in the Drylands), Rabbits, </span><span class="A-audiobook"><span class="A-licensed"></span>Flubbles (small six-legged koalas), an animal similar to a rabbit, but rounder, </span>
 					<span class="A-audiobook">Sealak (often eaten), <span class="A-licensed">Bear-Ass (a donkey like animal with bear-like qualities),</span> Horse-Cats,&nbsp;</span><span class="A-audiobook"><span class="A-licensed"></span>Elephants, </span>
 					<span class="A-audiobook">Pig-Bears (which can be trained to household pets, <span class="A-licensed">and can probobly suffer from swine fever),</span></span><span class="A-audiobook"><span class="A-licensed">
 wolf-like creatures (with very long snouts and black-and-white striped
