--- a/roobiology.html
+++ b/roobiology.html
@@ -256,10 +256,7 @@
 				<span class="A-audiobook">In the pre-Time War era there are between 3 and 9 million Gallifreyans living on the planet. </span>
 			</div>
 			<div class="section">
-				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave </span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid.</span>
-They smell of tangy celestial potental. The frames of some looms are
-silver. A new loom probably takes over 11 years to produce its first
-loomling. </span>
+				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave </span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid. </span>They smell of tangy celestial potental. The frames of some looms are silver. A new loom probably takes over 11 years to produce its first loomling. </span>
 				<span class="A-audiobook">The Looms are held in the loomshed of the&nbsp;physical house. Each House's loom has its own Loom core, which serves as
 					its genius loci. This creates a template that standardizes the abilities
 					<span class="A-alternate">and blood </span>of everyone loomling of that family. </span>
