--- a/rootimeline2.html
+++ b/rootimeline2.html
@@ -391,9 +391,7 @@
 					</span>
 					<span class="A-tv">
 						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; After a great deal of trouble with the
-						prototype, Omega (with Rassilon's help) finishes creating both of the Hands of Omega.&nbsp;</span><span class="A-tv"><span class="A-audiobook"> <span class="A-licensed">&nbsp;Omega
-proclaims that his Hands will liberate the Gallifreyans from the Chains
-of Time. On hearing this, Rassilon decrees that</span>&nbsp;</span></span><span class="A-tv"> the manipulator<span class="A-audiobook">s</span> be known as the Hands of Omega. <span class="A-audiobook">He does this for&nbsp;political reasons.</span></span><span class="A-tv"> They are designed to customize stars
+						prototype, Omega (with Rassilon's help) finishes creating both of the Hands of Omega.&nbsp;</span><span class="A-tv"><span class="A-audiobook"> <span class="A-licensed">&nbsp;Omega proclaims that his Hands will liberate the Gallifreyans from the Chains of Time. On hearing this, Rassilon decrees that</span>&nbsp;</span></span><span class="A-tv"> the manipulator<span class="A-audiobook">s</span> be known as the Hands of Omega. <span class="A-audiobook">He does this for&nbsp;political reasons.</span></span><span class="A-tv"> They are designed to customize stars
 						<span class="A-audiobook">and</span>
 					</span>
 					<span class="A-audiobook">are able to harness and manipulate the entire power output</span>
@@ -469,22 +467,22 @@ of Time. On hearing this, Rassilon decrees that</span>&nbsp;</span></span><span 
 						the Qqaba mission.&nbsp;</span><span class="A-audiobook">Omega begins to design the Eye of Harmony.&nbsp;He realizes that the energy of the Eye must be releases as an </span>
 					<span class="A-audiobook">osmotic stream by shifting the Eye slightly into the future.&nbsp; </span>
 				</p>
-				<p>
-					<span class="A-licensed">
-						<span class="A-game">-23.89 &nbsp;&nbsp;
-						</span>&nbsp;&nbsp; </span>
-					<span class="A-licensed">(the year Omega dies /</span>
-					<span class="A-licensed"> day 43 /
+					<figure>
+						<img src="images/undomed_capitol.jpg" alt="Undomed Capitol">
+						<figcaption>
+							<span class="A-licensed">Rassilon's re-constructed Capitol</span>
+						</figcaption>
+					</figure>
+					<p>
+						<span class="A-game">-23.89 &nbsp;&nbsp;&nbsp;&nbsp; </span>
+						<span class="A-licensed">(the year Omega dies /</span>
+						<span class="A-licensed"> day 43 / </span>
 						<span class="A-audiobook">probably a few centuries before it is complete)</span>
-					</span>
-					<span class="A-audiobook"> </span>
-					<span class="A-tv">
-						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The architect Rassilon begins designing
-						the Citadel and redesigning the rest of the Capitol.&nbsp; </span>
-					<span class="A-infinity">
-						The Citadel is designed to be an hourglass shaped fortress. </span>
-					<span class="A-fanon">For more information see: </span>
-					<a href="roogovernment.html#capitol">The Capitol</a>
+						<br>
+						<span class="A-tv"> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The architect Rassilon begins designing the Citadel and redesigning the rest of the Capitol. </span>
+						<span class="A-infinity">The Citadel is designed to be an hourglass shaped fortress. </span>
+						<span class="A-fanon">For more information see: </span>
+						<a href="roogovernment.html#capitol">The Capitol</a>
 				</p>
 				<p>
 					<span class="A-licensed">
@@ -546,36 +544,12 @@ ceremonial events <span class="A-audiobook">
 					<span class="A-licensed">
 						<span class="A-audiobook">after the looms / before unlimited time travel / almost certainly after the Vampires are released / </span>day 107)
 					</span>
-					<span class="A-licensed">
-						<br><big><big><big> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Biosynthesist, Thremix, proposes the
-						concept of
-						<span class="A-tv"> regeneration</span>
-					</big></big></big></span>
-					<span class="A-licensed">
-						<span class="A-audiobook">
-							<span class="A-licensed"><big><big><big>and creates the Immortality Virus.&nbsp;
-								</big></big></big><br>
-							</span>
-						</span>
-					</span>
+					<br>
+					<span class="A-licensed"> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Biosynthesist, Thremix, proposes the concept of </span><span class="A-tv"> regeneration</span>
+					<span class="A-licensed">and creates the Immortality Virus. </span>
 				</p>
 				<p>
-					<span class="A-licensed">
-						<span class="A-audiobook">
-							<span class="A-notbbc">??&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; The ceremonial armor of Faction
-Paradox is made of the bones of Vampiric Time Lords.&nbsp;The Faction
-claims that these are the bones of Gallifreyans from an alternate
-universe where the Time Lords lost the Eternal Wars.&nbsp;Others claim
-that the contamination happened in this universe during the Eternal War
-and thus the bones are also derived from the same universe.
-Official Time Lord history claims that no Time Lord was ever infected
-with the V-Factor.&nbsp;The Faction Armor could be made of failed
-experiments in developing Regeneration.&nbsp;Alternately the Armor
-could be the bones of future Gallifreyans who finally succumbed to the
-V-Factor in the Immortality Virus.</span>
-						</span>
-					</span>
+					<span class="A-notbbc">??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; The ceremonial armor of Faction Paradox is made of the bones of Vampiric Time Lords. The Faction claims that these are the bones of Gallifreyans from an alternate universe where the Time Lords lost the Eternal Wars. Others claim that the contamination happened in this universe during the Eternal War and thus the bones are also derived from the same universe. Official Time Lord history claims that no Time Lord was ever infected with the V-Factor. The Faction Armor could be made of failed experiments in developing Regeneration. Alternately the Armor could be the bones of future Gallifreyans who finally succumbed to the V-Factor in the Immortality Virus. </span>
 				</p>
 				<p>
 					<span class="A-licensed">
