--- a/rooweb.html
+++ b/rooweb.html
@@ -820,10 +820,12 @@ would be destroyed. </span><span class="A-game">Transduction barriers can also b
 		<div class="article" id="matrix" style="padding-top: 160px; margin-top: -160px;">
 			<figure>
 				<img src="images/matrix3.jpg" alt="Matrix Access Screen">
+
+				<img src="images/matrixchamber.jpg" alt="Matrix Chamber">
 				<img src="images/hallofmatrix.jpg" alt="Hall of the Matrix">
 				<figcaption>
-					<span class="A-tv">Matrix Access Screen, </span>
-					<span class="A-licensed">the Hall of the Matrix</span>
+					<span class="A-tv">Matrix Access Screen, the <span class="A-audiobook">Great </span>Chamber of the Matrix, </span>
+					<span class="A-licensed">and the Hall of the Matrix</span>
 				</figcaption>
 			</figure>
 			<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
