Capitol really done

--- a/roogovernment.html
+++ b/roogovernment.html
@@ -357,7 +357,10 @@ known as the Higher City (to differentiate it from </span></span><span class="A-
 				<span class="A-audiobook">The dimensionally transcendental chamber is so vast that it has its own weather systems <span class="A-licensed">(including occassional rain fall)</span> </span>
 				<span class="A-infinity">and it takes an hour to cross
 					<span class="A-fanon">the upper galleries </span>on foot. </span>
-				<span class="A-audiobook">The interior walls are designed to glow with a turquoise color when he sun is shining on the Citadel. There is a 6 sided debating chamber located in the center of the room. </span>
+				<span class="A-audiobook">The
+interior walls are designed to glow with a turquoise color when he sun
+is shining on the Citadel. There is a 6 sided debating chamber located
+in the center of the room. </span>
 				<span class="A-tv">There is an access point to
 					<span class="A-licensed">the Power Mast of </span>the Eye of Harmony is located in this debating area of the Panopticon beneath the <span class="A-licensed">Presidential</span> Dais. </span>
 				<span class="A-game">Due to the presence of the Power Mast, </span>
@@ -419,7 +422,7 @@ the Chancellery Guard. The Chancellery is located on level 5. <br></span>
 						<span class="A-tv">Security Control, Interrogation Cell, Execution Room, TARDIS Holding Bay, and <span class="A-audiobook"> High</span> Court Room</span>
 					</figcaption></figure><span style="font-weight: bold;" class="A-tv"><span class="A-licensed">High City </span></span><span style="font-weight: bold;" class="A-tv"><span class="A-licensed"></span></span>
 				<span style="font-weight: bold;" class="A-tv"><span class="A-licensed">Sector 4: </span></span><span class="A-audiobook">The rest of the Watch work in <span class="A-licensed">Sector 4's</span> Jasdisary Building&nbsp;</span><span class="A-audiobook"></span><span class="A-fanon">which is attached to the Citadel.</span><span class="A-audiobook"> The Jasidary Building holds 90 stories of administration offices.&nbsp;</span><span class="A-audiobook">There are no windows on the first 30 floors.</span><span class="A-audiobook"> It was designed by the architect Apeiron and completes a rotation every 58 minutes.&nbsp;</span><span class="A-fanon"></span><span class="A-tv">Within the <span class="A-licensed">Sector 4 of </span>the Citadel </span>
-				<span class="A-tv">is the Security Compound where Security Control</span><span class="A-audiobook">, High Court, <span class="A-licensed">interrogation cells, detention rooms, execution rooms,</span> and the Oubliette Suites are located.<span class="A-tv"> </span>The
+				<span class="A-tv">is the Security Compound where Security Control, the Castellan's office,</span><span class="A-audiobook"> High Court, <span class="A-licensed">interrogation cells, detention rooms, execution rooms,</span> and the Oubliette Suites are located.<span class="A-tv"> </span>The
 luxurious Oubliette Suites are where prisoners are held (if they aren't
 sent to Shada). There are holding cells beneath the Capitol with
 deadlocks. There are several holding bays for timeships should a recall
